W-13072016: Review JDKs used for building + running tests in Jenkins (#1161)
* Stabilize embedded-impl tests